[package]
name = "airquality"
version = "0.1.0"
edition = "2021"


[dependencies]
aht20 = "0.1.0"
aht20-driver = "0.1.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
format_no_std = "1.2.0"
nb = "1.1.0"
panic-rtt-core = "0.2.1"
rtt-target = "0.5.0"
shared-bus = { version = "0.3.1", features = ["cortex-m"] }
ssd1306 = "0.8.4"


[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[dependencies.ens160]
version = "0.2.0"
default-features = false

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
